2014-08-18  Dana Burkart  <dburkart@apple.com>

        Merge r172660

    2014-08-15  Alexey Proskuryakov  <ap@apple.com>

            Improve page to process relationship tracking
            https://bugs.webkit.org/show_bug.cgi?id=135996
            <rdar://problem/16991213>

            Reviewed by Sam Weinig.

            * UIProcess/VisitedLinkProvider.cpp:
            (WebKit::VisitedLinkProvider::removeAll):
            (WebKit::VisitedLinkProvider::pendingVisitedLinksTimerFired):
            (WebKit::VisitedLinkProvider::sendTable):
            Added assertions for m_processes only having valid entries.

            * UIProcess/WebPageProxy.cpp:
            (WebKit::WebPageProxy::reattachToWebProcess): When attaching to a new process,
            tell the old process that the page is not longer associated with it, avoiding
            a potential stale pointer.
            If re-attached to an existing process, make sure that we perform all the same
            registrations as after having launched a new process. This substantially improves
            the behavior when the number of open tabs is over process limit.
            (WebKit::WebPageProxy::reattachToWebProcessWithItem): Added ASSERT(!isValid())
            to avoid confusion. All other calls to reattachToWebProcess() have this as a
            runtime check, but reattachToWebProcessWithItem() is only called for valid pages.
            (WebKit::WebPageProxy::terminateProcess): Added an assertion with a FIXME for
            something that will need to be fixed another day.

            * UIProcess/WebPageProxy.h: Removed an unimplemented function.

            * UIProcess/WebProcessProxy.cpp:
            (WebKit::WebProcessProxy::addExistingWebPage): Added assertions for page map sanity.
            (WebKit::WebProcessProxy::removeWebPage): Added a check for page state being Terminated
            already. This avoids an assertion failure that happened under the new call to