@@ -1,3 +1,14 @@
+2014-08-18  Dana Burkart  <dburkart@apple.com>
+
+        Merge r172680
+
+    2014-08-15  Alexey Proskuryakov  <ap@apple.com>
+
+            REGRESSION (r172660): WebKit2.TerminateTwice asserts
+            https://bugs.webkit.org/show_bug.cgi?id=136012
+
+            * TestWebKitAPI/Tests/WebKit2/TerminateTwice.cpp: Skipped the test in debug mode.
+
 2014-08-14  Lucas Forschler  <lforschler@apple.com>
 
         Merge r172604
